--- a/Hotel/src/hotel/apresentacao/frmPrincipal.form
+++ b/Hotel/src/hotel/apresentacao/frmPrincipal.form
@@ -4,6 +4,40 @@
   <NonVisualComponents>
     <Menu class="javax.swing.JMenuBar" name="mnbPrincipal">
       <SubComponents>
+        <Menu class="javax.swing.JMenu" name="mnuCadastro">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Cadastros"/>
+          </Properties>
+          <SubComponents>
+            <MenuItem class="javax.swing.JMenuItem" name="mniFilme">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Pessoa"/>
+              </Properties>
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="mniFormaPgto">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Tipo de Quarto"/>
+              </Properties>
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="mniGenero">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Quarto"/>
+              </Properties>
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="mniPessoa">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Consum&#xed;vel"/>
+                <Property name="toolTipText" type="java.lang.String" value=""/>
+              </Properties>
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="mniTipoMidia">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Forma de Pagamento"/>
+                <Property name="actionCommand" type="java.lang.String" value="Tipo M&#xed;dia"/>
+              </Properties>
+            </MenuItem>
+          </SubComponents>
+        </Menu>
         <Menu class="javax.swing.JMenu" name="mnuLocacao">
           <Properties>
             <Property name="label" type="java.lang.String" value="Loca&#xe7;&#xe3;o"/>
@@ -14,44 +48,10 @@
             <Property name="label" type="java.lang.String" value="Reserva"/>
           </Properties>
         </Menu>
-        <Menu class="javax.swing.JMenu" name="mnuCadastro">
+        <Menu class="javax.swing.JMenu" name="mnuFinanceiro">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Cadastros"/>
+            <Property name="text" type="java.lang.String" value="Financeiro"/>
           </Properties>
-          <SubComponents>
-            <MenuItem class="javax.swing.JMenuItem" name="mniFilme">
-              <Properties>
-                <Property name="text" type="java.lang.String" value="Filme"/>
-              </Properties>
-            </MenuItem>
-            <MenuItem class="javax.swing.JMenuItem" name="mniFormaPgto">
-              <Properties>
-                <Property name="text" type="java.lang.String" value="Forma de Pagamento"/>
-              </Properties>
-            </MenuItem>
-            <MenuItem class="javax.swing.JMenuItem" name="mniGenero">
-              <Properties>
-                <Property name="text" type="java.lang.String" value="G&#xea;nero"/>
-              </Properties>
-            </MenuItem>
-            <MenuItem class="javax.swing.JMenuItem" name="mniPessoa">
-              <Properties>
-                <Property name="text" type="java.lang.String" value="Pessoa"/>
-                <Property name="toolTipText" type="java.lang.String" value=""/>
-              </Properties>
-            </MenuItem>
-            <MenuItem class="javax.swing.JMenuItem" name="mniTipoMidia">
-              <Properties>
-                <Property name="text" type="java.lang.String" value="Tipo de M&#xed;dia"/>
-                <Property name="actionCommand" type="java.lang.String" value="Tipo M&#xed;dia"/>
-              </Properties>
-            </MenuItem>
-            <MenuItem class="javax.swing.JMenuItem" name="mniUsuario">
-              <Properties>
-                <Property name="text" type="java.lang.String" value="Usu&#xe1;rio"/>
-              </Properties>
-            </MenuItem>
-          </SubComponents>
         </Menu>
         <Menu class="javax.swing.JMenu" name="mnuRelatorio">
           <Properties>
@@ -70,11 +70,38 @@
             </MenuItem>
           </SubComponents>
         </Menu>
+        <Menu class="javax.swing.JMenu" name="mnuUsuario">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Usu&#xe1;rio"/>
+          </Properties>
+          <SubComponents>
+            <MenuItem class="javax.swing.JMenuItem" name="jMenuItem2">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Cadastro"/>
+              </Properties>
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="jMenuItem3">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Permiss&#xe3;o"/>
+              </Properties>
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="jMenuItem4">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Auditoria"/>
+              </Properties>
+            </MenuItem>
+          </SubComponents>
+        </Menu>
         <Menu class="javax.swing.JMenu" name="mnuAjuda">
           <Properties>
             <Property name="text" type="java.lang.String" value="Ajuda"/>
           </Properties>
           <SubComponents>
+            <MenuItem class="javax.swing.JMenuItem" name="jMenuItem1">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Cadastro de Aplica&#xe7;&#xe3;o"/>
+              </Properties>
+            </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="mniSair">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Sair"/>
@@ -90,7 +117,7 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
-    <Property name="title" type="java.lang.String" value="Video Store - Locadora"/>
+    <Property name="title" type="java.lang.String" value="Hotel Integrador"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="menuBar" type="java.lang.String" value="mnbPrincipal"/>
