--- a/Hotel/src/hotel/apresentacao/frmPrincipal.form
+++ b/Hotel/src/hotel/apresentacao/frmPrincipal.form
@@ -41,6 +41,9 @@
                 <Property name="text" type="java.lang.String" value="Forma de Pagamento"/>
                 <Property name="actionCommand" type="java.lang.String" value="Tipo M&#xed;dia"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="mniFormaPgtoActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
